@startuml

entity User {
    * id varchar(100) <<PK>>
    --
    * name varchar(100)
}

entity Notification {
    * id INT auto increment <<PK>>
    --
    * title varchar(255)
    * detail TEXT
    * created_at timestamp
    --
    user_id varchar(100) <<FK>>
    category_id varchar(100) <<FK>>

}

entity Category {
    * id varchar(100) <<PK>>
    --
    * name varchar(100)
}

entity NotificationRead {
    * id INT AUTO INCREMENT  <<PK>>
    --
    * is_read boolean
    --
    * notification_id INT <<FK>>
    * user_id varchar(100) <<FK>>
}

User ||--o{ Notification
Category ||--o{ Notification
Notification ||--o{ NotificationRead
User ||--o{ NotificationRead

@enduml